Remove Underrepresented feature

--- a/VictorVu_Dask.ipynb
+++ b/VictorVu_Dask.ipynb
@@ -2239,6 +2239,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Underrepresented Features\n",
+    "\n",
+    "Now we will remove underrepresented features, meaning those that in 99% of the records have a single value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " The underrepresented variable is ['weathersit_4']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def under_represented_features(df, threshold = 0.99, holdout_df = None):\n",
+    "    under_rep = []\n",
+    "    for column in df:\n",
+    "        counts = df[column].value_counts()\n",
+    "        majority_freq = counts.iloc[0]\n",
+    "        if (majority_freq / len(df)) > threshold:\n",
+    "            under_rep.append(column)\n",
+    "            \n",
+    "    if not under_rep:\n",
+    "        print('No underrepresented features')\n",
+    "    else:\n",
+    "        if TARGET_VARIABLE in under_rep:\n",
+    "            print('The target variable is underrepresented, consider rebalancing')\n",
+    "            under_represented.remove(TARGET_VARIABLE)\n",
+    "        print(' The underrepresented variable is ' + str(under_rep) )\n",
+    "        \n",
+    "under_represented_features(data_dummy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del data_dummy[\"weathersit_4\"]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
