Build XGBoost model

--- a/VictorVu_Dask.ipynb
+++ b/VictorVu_Dask.ipynb
@@ -51,45 +51,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: dask-ml in /anaconda3/lib/python3.6/site-packages (0.12.0)\n",
-      "Requirement already satisfied: scikit-learn>=0.20 in /anaconda3/lib/python3.6/site-packages (from dask-ml) (0.20.2)\n",
-      "Requirement already satisfied: six in /anaconda3/lib/python3.6/site-packages (from dask-ml) (1.12.0)\n",
-      "Requirement already satisfied: dask-glm in /anaconda3/lib/python3.6/site-packages (from dask-ml) (0.2.0)\n",
-      "Requirement already satisfied: dask[array]>=1.0.0 in /anaconda3/lib/python3.6/site-packages (from dask-ml) (1.1.1)\n",
-      "Requirement already satisfied: numba in /anaconda3/lib/python3.6/site-packages (from dask-ml) (0.42.0)\n",
-      "Requirement already satisfied: distributed>=1.25.0 in /anaconda3/lib/python3.6/site-packages (from dask-ml) (1.25.3)\n",
-      "Requirement already satisfied: scipy in /anaconda3/lib/python3.6/site-packages (from dask-ml) (1.2.0)\n",
-      "Requirement already satisfied: multipledispatch>=0.4.9 in /anaconda3/lib/python3.6/site-packages (from dask-ml) (0.6.0)\n",
-      "Requirement already satisfied: packaging in /anaconda3/lib/python3.6/site-packages (from dask-ml) (19.0)\n",
-      "Requirement already satisfied: pandas>=0.23.4 in /anaconda3/lib/python3.6/site-packages (from dask-ml) (0.24.1)\n",
-      "Requirement already satisfied: numpy in /anaconda3/lib/python3.6/site-packages (from dask-ml) (1.15.4)\n",
-      "Requirement already satisfied: cloudpickle>=0.2.2 in /anaconda3/lib/python3.6/site-packages (from dask-glm->dask-ml) (0.7.0)\n",
-      "Requirement already satisfied: toolz>=0.7.3; extra == \"array\" in /anaconda3/lib/python3.6/site-packages (from dask[array]>=1.0.0->dask-ml) (0.9.0)\n",
-      "Requirement already satisfied: llvmlite>=0.27.0dev0 in /anaconda3/lib/python3.6/site-packages (from numba->dask-ml) (0.27.0)\n",
-      "Requirement already satisfied: click>=6.6 in /anaconda3/lib/python3.6/site-packages (from distributed>=1.25.0->dask-ml) (7.0)\n",
-      "Requirement already satisfied: msgpack in /anaconda3/lib/python3.6/site-packages (from distributed>=1.25.0->dask-ml) (0.6.1)\n",
-      "Requirement already satisfied: psutil>=5.0 in /anaconda3/lib/python3.6/site-packages (from distributed>=1.25.0->dask-ml) (5.5.0)\n",
-      "Requirement already satisfied: sortedcontainers!=2.0.0,!=2.0.1 in /anaconda3/lib/python3.6/site-packages (from distributed>=1.25.0->dask-ml) (2.1.0)\n",
-      "Requirement already satisfied: tblib in /anaconda3/lib/python3.6/site-packages (from distributed>=1.25.0->dask-ml) (1.3.2)\n",
-      "Requirement already satisfied: tornado>=4.5.1 in /anaconda3/lib/python3.6/site-packages (from distributed>=1.25.0->dask-ml) (5.1.1)\n",
-      "Requirement already satisfied: zict>=0.1.3 in /anaconda3/lib/python3.6/site-packages (from distributed>=1.25.0->dask-ml) (0.1.3)\n",
-      "Requirement already satisfied: pyyaml in /anaconda3/lib/python3.6/site-packages (from distributed>=1.25.0->dask-ml) (3.13)\n",
-      "Requirement already satisfied: pyparsing>=2.0.2 in /anaconda3/lib/python3.6/site-packages (from packaging->dask-ml) (2.3.1)\n",
-      "Requirement already satisfied: pytz>=2011k in /anaconda3/lib/python3.6/site-packages (from pandas>=0.23.4->dask-ml) (2018.9)\n",
-      "Requirement already satisfied: python-dateutil>=2.5.0 in /anaconda3/lib/python3.6/site-packages (from pandas>=0.23.4->dask-ml) (2.7.5)\n",
-      "Requirement already satisfied: heapdict in /anaconda3/lib/python3.6/site-packages (from zict>=0.1.3->distributed>=1.25.0->dask-ml) (1.0.0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "! pip install dask-ml"
+    "#! pip install dask-ml\n",
+    "#! pip install dask_xgboost\n"
    ]
   },
   {
@@ -1183,7 +1150,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1c283f4b00>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1c23894dd8>"
       ]
      },
      "execution_count": 18,
@@ -1461,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 48,
    "metadata": {
     "scrolled": false
    },
@@ -1475,7 +1442,7 @@
        "         solver_kwargs=None, tol=0.0001, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1599,6 +1566,13 @@
    "source": [
     "from dask_ml.metrics import r2_score as r2\n",
     "r2(y_test_array, dask_array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The base model perform quite poorly in predicting unseen data. Therefore we will go ahead to perform some Feature Engineering and use a more robust algorithm such as Random Forest."
    ]
   },
   {
@@ -2500,7 +2474,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 75,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=10,\n",
+       "           max_features=3, max_leaf_nodes=None, min_impurity_decrease=0.0,\n",
+       "           min_impurity_split=None, min_samples_leaf=2,\n",
+       "           min_samples_split=8, min_weight_fraction_leaf=0.0,\n",
+       "           n_estimators=100, n_jobs=None, oob_score=False,\n",
+       "           random_state=None, verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_search.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {
     "scrolled": true
    },
@@ -2512,7 +2513,7 @@
        "       207.33498973, 176.26067625])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2526,58 +2527,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "I attempted to try Grid Searching for the best parameter for the Random Forest model, however with the best parameter, the model generate very poor prediction thus resulting in low R Squared. Therefore, I will stick with the default random forest model. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Build RF Model from the best parameters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "with parallel_backend('dask'):\n",
     "    rf.fit(X_train_final.values, y_train_final.values)\n",
-    "    pred_final=rf.predict(X_test_final.values)"
+    "    rf_pref=rf.predict(X_test_final.values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 58.3,  19.9,   8. , ..., 132.3,  78.2,  48.5])"
+       "array([ 52.7,  16.3,  12.3, ..., 100.2,  99.8,  52.8])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pred_final"
+    "rf_pref"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8063976883751272"
+       "0.8002627794307082"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rf_pred_array = da.from_array(pred_final, chunks=1000)\n",
+    "rf_pred_array = da.from_array(rf_pref, chunks=1000)\n",
     "y_test_array = da.from_array(y_test_final.values, chunks=1000)\n",
     "\n",
     "from dask_ml.metrics import r2_score as r2\n",
@@ -2585,11 +2593,110 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Random Forest model has generated a much better R Squared of 0.8. This is a huge improvement from the R Squared of the Base Model of only 0.3. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Build XGBoost Model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_train_xgb = da.from_array(X_train_final.values,chunks=1000)\n",
+    "y_train_xgb = da.from_array(y_train_final.values,chunks=1000)\n",
+    "X_test_xgb = da.from_array(X_test_final.values,chunks=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "XGBRegressor(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+       "       colsample_bytree=1, gamma=0, importance_type='gain',\n",
+       "       learning_rate=0.1, max_delta_step=0, max_depth=3,\n",
+       "       min_child_weight=1, missing=None, n_estimators=100, n_jobs=1,\n",
+       "       nthread=None, objective='reg:linear', random_state=0, reg_alpha=0,\n",
+       "       reg_lambda=1, scale_pos_weight=1, seed=None, silent=True,\n",
+       "       subsample=1)"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from dask_ml.xgboost import XGBRegressor\n",
+    "est = XGBRegressor()\n",
+    "est.fit(X_train_xgb, y_train_xgb)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dask.array<_predict_part, shape=(2168,), dtype=float32, chunksize=(1000,)>"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "XGB_pred = est.predict(X_test_xgb)\n",
+    "XGB_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6571588553405713"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xgb_pred_array = da.from_array(XGB_pred, chunks=1000)\n",
+    "r2(y_test_array, xgb_pred_array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The XGBoost model generates a lower R Squared than the Random Forest model. Thus I will settle with the Random Forest model. "
+   ]
   }
  ],
  "metadata": {
